<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.udacity.portfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_header"
            android:textSize="22sp"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:id="@+id/button_popular_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_popular_movies"
            android:padding="20dp"
            />

        <Button
            android:id="@+id/button_stock_hawk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_stock_hawk"
            android:padding="20dp"
            />

        <Button
            android:id="@+id/button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_build_it_bigger"
            android:padding="20dp"
            />

        <Button
            android:id="@+id/button_material"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_material"
            android:padding="20dp"
            />


        <Button
            android:id="@+id/button_go_ubiquitous"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_go_ubiquitous"
            android:padding="20dp"
            />

        <Button
            android:id="@+id/button_capstone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_capstone"
            android:padding="20dp"
            />
    </LinearLayout>
</RelativeLayout>